[gd_scene load_steps=15 format=3 uid="uid://dwyf2ne2b4etm"]

[ext_resource type="Script" uid="uid://bsvr3jv4m6hdc" path="res://potion.gd" id="1_1bakm"]
[ext_resource type="Texture2D" uid="uid://mer3d0kd304f" path="res://sprites/items/Green Bottle/01.png" id="2_t7n2o"]
[ext_resource type="Texture2D" uid="uid://dqpi20y44fob4" path="res://sprites/items/Green Bottle/Potion Effect/01.png" id="2_yxgu6"]
[ext_resource type="Texture2D" uid="uid://bkhdp20bsd3le" path="res://sprites/items/Green Bottle/02.png" id="3_ok4dw"]
[ext_resource type="Texture2D" uid="uid://kk73idmxwisk" path="res://sprites/items/Green Bottle/Potion Effect/02.png" id="3_qted3"]
[ext_resource type="Texture2D" uid="uid://cxu0g8qp3t43i" path="res://sprites/items/Green Bottle/Potion Effect/03.png" id="4_ancum"]
[ext_resource type="Texture2D" uid="uid://6rxpos5uhtah" path="res://sprites/items/Green Bottle/03.png" id="4_vimwg"]
[ext_resource type="Texture2D" uid="uid://k7kr5als805p" path="res://sprites/items/Green Bottle/Potion Effect/04.png" id="5_yp1kk"]
[ext_resource type="Texture2D" uid="uid://bfa8e6q5iryub" path="res://sprites/items/Green Bottle/04.png" id="5_yxgu6"]
[ext_resource type="Texture2D" uid="uid://b0c8q3b0rrf3j" path="res://sprites/items/Green Bottle/05.png" id="6_qted3"]
[ext_resource type="Texture2D" uid="uid://bgik1uqf6cbxm" path="res://sprites/items/Green Bottle/06.png" id="7_ancum"]
[ext_resource type="Texture2D" uid="uid://8wiwxrnhnanr" path="res://sprites/items/Green Bottle/07.png" id="8_yp1kk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8dbo2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yxgu6")
}, {
"duration": 1.0,
"texture": ExtResource("3_qted3")
}, {
"duration": 1.0,
"texture": ExtResource("4_ancum")
}, {
"duration": 1.0,
"texture": ExtResource("5_yp1kk")
}],
"loop": false,
"name": &"effect",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_t7n2o")
}, {
"duration": 1.0,
"texture": ExtResource("3_ok4dw")
}, {
"duration": 1.0,
"texture": ExtResource("4_vimwg")
}, {
"duration": 1.0,
"texture": ExtResource("5_yxgu6")
}, {
"duration": 1.0,
"texture": ExtResource("6_qted3")
}, {
"duration": 1.0,
"texture": ExtResource("7_ancum")
}, {
"duration": 1.0,
"texture": ExtResource("8_yp1kk")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_a6teu"]
radius = 11.0

[node name="potion" type="Area2D"]
script = ExtResource("1_1bakm")
metadata/_edit_group_ = true

[node name="animated_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8dbo2")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_a6teu")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
